correctedoverflow

--- a/Frontend/src/Changes/Add.css
+++ b/Frontend/src/Changes/Add.css
@@ -6,7 +6,9 @@
     background-color: #f9f9f9;
     border-radius: 12px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    position: relative; /* Add this to allow positioning of the close icon */
+    position: relative;
+    max-height: 90vh;
+    overflow-y: auto;
   }
   
   /* Header */
@@ -23,8 +25,8 @@
     cursor: pointer;
     font-size: 1.5rem;
     position: absolute;
-    top: 10px; /* Adjust this value for desired vertical positioning */
-    right: 10px; /* Adjust this value for desired horizontal positioning */
+    top: 10px; 
+    right: 10px; 
   }
   
   /* Form */
@@ -34,7 +36,7 @@
     align-items: center;
   }
   
-  /* Form elements */
+ 
   .any-form > div {
     display: flex;
     flex-direction: column;
@@ -73,7 +75,7 @@
     font-size: 1rem;
     transition: border-color 0.3s ease;
     width: 100%;
-    box-sizing: border-box; /* To include padding in width calculation */
+    box-sizing: border-box; 
   }
   
   .any-form input:focus,
